kubernetes/apps/cal/cal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cal
  namespace: cal
spec:
  selector:
    app: cal
  ports:
    - port: 3000
